@@ -1,12 +1,30 @@
 {
-  "timestamp" : "2026-02-17T01:18:36Z",
-  "count_outdated" : 1639,
-  "uniques_outdated" : 1159,
-  "count" : 1642,
-  "uniques" : 1162,
+  "timestamp" : "2026-02-21T01:13:28Z",
+  "count_outdated" : 1642,
+  "uniques_outdated" : 1162,
+  "count" : 1662,
+  "uniques" : 1179,
   "clones" : [
     {
-      "timestamp": "2026-01-21T00:00:00Z",
+      "timestamp": "2026-02-05T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 8,
+      "uniques_minmax": [ 8, 8 ],
+      "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2026-02-06T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2026-02-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,25 +33,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2026-01-22T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-01-23T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-01-24T00:00:00Z",
+      "timestamp": "2026-02-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -42,7 +42,16 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2026-01-25T00:00:00Z",
+      "timestamp": "2026-02-09T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -51,7 +60,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2026-01-26T00:00:00Z",
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -60,7 +69,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2026-01-27T00:00:00Z",
+      "timestamp": "2026-02-12T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -69,7 +78,16 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2026-01-28T00:00:00Z",
+      "timestamp": "2026-02-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2026-02-14T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -78,7 +96,16 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2026-01-29T00:00:00Z",
+      "timestamp": "2026-02-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2026-02-16T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -87,7 +114,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2026-01-30T00:00:00Z",
+      "timestamp": "2026-02-17T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
@@ -96,34 +123,7 @@
       "uniques_decinc": [ 0, 0 ]
     },
     {
-      "timestamp": "2026-01-31T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-02-01T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-02-02T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
-    {
-      "timestamp": "2026-02-03T00:00:00Z",
+      "timestamp": "2026-02-18T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
