@@ -1,74 +1,74 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 20,
+  "uniques": 17,
   "clones": [
     {
-      "timestamp": "2026-01-21T00:00:00Z",
+      "timestamp": "2026-02-05T00:00:00Z",
+      "count": 11,
+      "uniques": 8
+    },
+    {
+      "timestamp": "2026-02-06T00:00:00Z",
+      "count": 3,
+      "uniques": 3
+    },
+    {
+      "timestamp": "2026-02-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2026-01-22T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-23T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-24T00:00:00Z",
+      "timestamp": "2026-02-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2026-01-25T00:00:00Z",
+      "timestamp": "2026-02-09T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2026-01-26T00:00:00Z",
+      "timestamp": "2026-02-11T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-27T00:00:00Z",
+      "timestamp": "2026-02-12T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-28T00:00:00Z",
+      "timestamp": "2026-02-13T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2026-02-14T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-29T00:00:00Z",
+      "timestamp": "2026-02-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-02-16T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-30T00:00:00Z",
+      "timestamp": "2026-02-17T00:00:00Z",
       "count": 0,
       "uniques": 0
     },
     {
-      "timestamp": "2026-01-31T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-01T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-02T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-03T00:00:00Z",
+      "timestamp": "2026-02-18T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
