@@ -1,3 +1,12 @@
+2026-02-21T01:13:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22247391667 # 884
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-21
+* notice: last 14d: unq all: 17 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 1159 1639 / 1162 1642
+* notice: next accum: outdated-unq outdated-all / unq all: 1162 1642 / 1179 1662
+* notice: prev exec diff / last date diff / accum: unq all: +6 +6 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30 2026-01-31 2026-02-01 2026-02-02 2026-02-03] / [2026-02-07 2026-02-08 2026-02-10 2026-02-13 2026-02-15]
+
 2026-02-17T01:18:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22082590444 # 880
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
